--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -371,7 +371,7 @@
     "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
     "dashboard": "Taffel",
     "dashboard-backup": "Copia de seguridad",
-    "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
+    "dashboard-backup-p": "Wir erinnern Sie daran, dass Sie FacturaScripts auf Ihrem PC installiert haben, daher werden die Daten (Rechnungen, Kunden usw.) auf Ihrem PC und nur auf Ihrem PC gespeichert. Erstellen Sie regelmäßig Backups und bewahren Sie diese Sicherungskopien außerhalb des PCs auf.",
     "dashboard-for": "Taffel der %company%",
     "data-source": "Datenquelle",
     "database": "Datenbank",
@@ -475,7 +475,7 @@
     "document-type": "Dokumententyp",
     "document-type-valid-length": "Ungültiger Dokumenttyp Muss zwischen 1 und 20 Zeichen lang sein.",
     "document-wildcard-info": "Dokument in der Kopzeile der Buchung",
-    "document-without-total": "Documento %document% sin totales o con el total a 0.",
+    "document-without-total": "Dokument %document% ohne Gesamtsumme oder mit Gesamtsumme 0.",
     "documentation": "Dokumentation",
     "documents": "Documentos",
     "documents-generated": "Dokumente erstellt",
@@ -562,7 +562,7 @@
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Régimen simplificado",
-    "es-tax-regime-surcharge": "Recargo de equivalencia",
+    "es-tax-regime-surcharge": "Spanische Sonderregelung",
     "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
@@ -653,7 +653,7 @@
     "free": "Kostenlos",
     "friday": "Freitag",
     "from": "von",
-    "from-accounting-entry": "from-accounting-entry",
+    "from-accounting-entry": "von Buchungseintrag",
     "from-date": "von Datum",
     "from-subaccount": "von Unterkonto",
     "full-access": "voller Zugriff",
@@ -768,6 +768,7 @@
     "installer-requirements": "Die folgenden Erweiterungen und Funktionen werden für FacturaScripts benötigt:",
     "integrity-check": "Integrity check",
     "integrity-check-help": "This is a check of system integrity, described as",
+    "interest": "Interés",
     "international-identifier": "Internationale Kennung",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
@@ -824,7 +825,7 @@
     "lang-code": "Sprachcode",
     "language": "Sprache:",
     "languages-ca_ES": "katalanisch",
-    "languages-cs_CZ": "Checo",
+    "languages-cs_CZ": "Tschechisch",
     "languages-de_DE": "Deutsch",
     "languages-en_EN": "Englisch",
     "languages-es_AR": "Español (Argentina)",
@@ -1093,7 +1094,7 @@
     "pagename": "Seitenname",
     "pages": "Seiten",
     "paid": "bezahlt",
-    "paid-or-unpaid": "Pagado o impagado",
+    "paid-or-unpaid": "Bezahlt oder unbezahlt",
     "paid-receipts-prevent-action": "paid-receipts-prevent-action",
     "parent": "Elternteil",
     "parent-account": "Parent Account",
@@ -1188,7 +1189,7 @@
     "print-export-options": "Druck- und Exportoptionen",
     "print-list-of-records": "Liste der Datensätze drucken",
     "print-price": "Imprimir precios",
-    "print-quantity": "Imprimir cantidad",
+    "print-quantity": "Druckmenge",
     "printed": "gedruckt",
     "printing-format": "Druckformat",
     "printing-formats": "Druckformate",
@@ -1196,7 +1197,7 @@
     "private": "Privat",
     "private-key": "Clave privada",
     "process": "Proceso",
-    "processing": "processing",
+    "processing": "Verarbeitung",
     "product": "Produkt",
     "product-not-found": "Producto %ref% no encontrado",
     "products": "Produkte",
@@ -1251,7 +1252,7 @@
     "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Korrekturserie",
-    "redirect": "Redirección",
+    "redirect": "Weiterleitung",
     "reference": "Referenz",
     "reference+description": "Referenz + Beschreibung",
     "refresh": "Aktualisierung",
@@ -1510,7 +1511,7 @@
     "test-mail-not-implemented": "Der Test des Mail-Controller ist nicht implementiert",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
     "text-color": "Color de texto",
-    "texts": "texts",
+    "texts": "Texte",
     "third-quarter": "3º trimestre",
     "third-trimester": "Third trimester",
     "this-last-fortnight": "this-last-fortnight",
@@ -1666,7 +1667,7 @@
     "yesterday": "Gestern",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
     "you-sent-a-audio": "Enviaste un audio",
-    "you-sent-a-document": "Enviaste un documento",
+    "you-sent-a-document": "Sie haben ein Dokument gesendet",
     "you-sent-a-location": "Enviaste una ubicación",
     "you-sent-a-picture": "Enviaste una imagen",
     "you-sent-a-video": "Enviaste un video",
