--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -701,10 +701,10 @@
     "group-by-month": "Raggruppa per mese",
     "group-by-month-unixtime": "group-by-month-unixtime",
     "group-by-subaccount": "Agrupar por subcuenta",
-    "group-by-week": "group-by-week",
+    "group-by-week": "raggruppa-per-settimana",
     "group-by-week-unixtime": "Raggruppa per settimana unixtime",
     "group-by-year": "Raggruppa per anno",
-    "group-by-year-unixtime": "group-by-year-unixtime",
+    "group-by-year-unixtime": "raggruppa-per-anno-unixtime",
     "group-more-docs-p": "group-more-docs-p",
     "group-name": "Nome del Gruppo",
     "group-or-split": "Group or split",
@@ -714,7 +714,7 @@
     "has-attachments": "Tiene adjuntos",
     "has-parent": "has-parent",
     "hash": "Hash",
-    "header": "Cabecera",
+    "header": "Intestazione",
     "heading-account-group-id": "Gruppo ID dell'account di intestazioni",
     "heading-account-id-root": "Radice dell'account di intestazione",
     "health": "health",
@@ -768,6 +768,7 @@
     "installer-requirements": "Le seguenti estensioni e funzioni sono necessarie per FacturaScript:",
     "integrity-check": "Controllo integrità",
     "integrity-check-help": "Questa è una verifica dell'integrità del sistema, descritta come",
+    "interest": "Interés",
     "international-identifier": "Identificatore internazionale",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
@@ -859,7 +860,7 @@
     "last-semester": "Ultimo semestre",
     "last-trimester": "Ultimo trimestre",
     "last-update": "last-update",
-    "last-user": "Último usuario",
+    "last-user": "Ultimo utente",
     "last-week": "last-week",
     "last-year": "last-year",
     "latitude": "Latitudine",
@@ -918,7 +919,7 @@
     "mail-test-ok": "Test dell'e-mail completata con successo",
     "mailer": "Mail controller",
     "main-address": "Indirizzo principale",
-    "manage": "manage",
+    "manage": "gestire",
     "manage-installation": "Administrar",
     "manual": "manual",
     "manufacturer": "fabbricante",
@@ -929,7 +930,7 @@
     "margin-top": "Margine superiore",
     "mark-as-homepage": "Segna come homepage",
     "marked-as-homepage": "Contrassegnato come homepage",
-    "max-input-vars-warning": "max-input-vars-warning",
+    "max-input-vars-warning": "avviso-max-input-vars",
     "max-risk": "Rischio massimo",
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
@@ -1204,7 +1205,7 @@
     "profit-and-loss": "Profit and Loss",
     "profit-and-loss-balance": "Profit and loss accounts",
     "profits": "Profitti",
-    "project": "project",
+    "project": "progetto",
     "projects": "progetti",
     "provider-reference": "Riferimento del fornitore",
     "province": "provincia",
@@ -1348,7 +1349,7 @@
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Envió un audio",
     "sent-a-document": "Envió un documento",
-    "sent-a-location": "Envió una ubicación",
+    "sent-a-location": "Ha inviato una posizione",
     "sent-a-picture": "Ha inviato un'immagine",
     "sent-a-video": "Ha inviato un video",
     "sent-message-by": "Enviado por %nick% el %date%",
