--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -324,7 +324,7 @@
     "counterpart": "Offsetting",
     "countries": "Países",
     "country": "País",
-    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
+    "country-not-in-eu": "O %codiso% não pertence a nenhum país da União Europeia",
     "create": "Criar",
     "create-accounting-entry": "Create Accounting Entry",
     "create-delivery-note": "Crear albarán",
@@ -415,10 +415,10 @@
     "delete-data": "Eliminar dados",
     "delete-file": "delete-file",
     "delete-logs": "Eliminar historial",
-    "delete-opening": "delete-opening",
+    "delete-opening": "Eliminar abertura",
     "delete-record": "Remover registro",
     "Deleted": "Eliminado",
-    "deleted-model": "Eliminado %model% (%key%) %desc%",
+    "deleted-model": "Modelo eliminado %model% (%key%) %desc%",
     "delivery-note": "Nota de entrega",
     "delivery-note-email-subject": "A sua nota de entrega %code%",
     "delivery-note-email-text": "Olá, vai anexo a sua Nota de Entrega %code%",
@@ -478,7 +478,7 @@
     "document-without-total": "Documento %document% sin totales o con el total a 0.",
     "documentation": "Documentação",
     "documents": "Documentos",
-    "documents-generated": "documents-generated",
+    "documents-generated": "documentos gerados",
     "domiciled": "Domiciliado",
     "done": "Feito",
     "done-date": "Data de conclusão",
@@ -521,7 +521,7 @@
     "empty-ref-or-missing": "Referencia vacía o producto no encontrado",
     "enable": "Habilitar",
     "enable-api": "Enable API",
-    "enable-updates-beta": "Activar actualizaciones beta",
+    "enable-updates-beta": "Ativar atualizações beta",
     "enabled": "ativado",
     "enabled-plugins": "Plugins activos",
     "encrypt": "Encrypt",
@@ -555,7 +555,7 @@
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "E",
     "es-tax-regime-agrarian": "R",
-    "es-tax-regime-cash-criteria": "Criterio de caja",
+    "es-tax-regime-cash-criteria": "Criterio de caixa",
     "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-exempt": "Isento do regime de impostos",
     "es-tax-regime-general": "Régimen general",
@@ -610,7 +610,7 @@
     "file-not-found": "O arquivo 0 não foi encontrado.",
     "file-not-supported": "Arquivo não suportado",
     "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
-    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
+    "file-type-error": "Erro ao enviar o arquivo do tipo%typeFile%. Os tipos suportados são: áudio, documento, imagem e vídeo.",
     "file-yet-exists": "O ficheiro já existe: %filePath%",
     "filecache-clear": "Filecache desmarcada.",
     "filecache-delete-key-item": "Elemento eliminado '0' da Filecache.",
@@ -697,19 +697,19 @@
     "group": "Grupo",
     "group-accounts": "group-accounts",
     "group-by-day": "Agrupar por dia",
-    "group-by-day-unixtime": "group-by-day-unixtime",
+    "group-by-day-unixtime": "Agrupar por dia - unixtime",
     "group-by-month": "group-by-month",
     "group-by-month-unixtime": "group-by-month-unixtime",
     "group-by-subaccount": "Agrupar por subcuenta",
     "group-by-week": "group-by-week",
     "group-by-week-unixtime": "group-by-week-unixtime",
     "group-by-year": "group-by-year",
-    "group-by-year-unixtime": "group-by-year-unixtime",
+    "group-by-year-unixtime": "Agrupar por ano - unixtime",
     "group-more-docs-p": "group-more-docs-p",
     "group-name": "Nome do Grupo",
     "group-or-split": "Group or split",
     "group-or-split-p": "group-or-split-p",
-    "grouping-type": "Agrupación",
+    "grouping-type": "Tipo de agrupamento",
     "groups": "Grupos",
     "has-attachments": "Tiene adjuntos",
     "has-parent": "Tem pai",
@@ -741,7 +741,7 @@
     "id": "Identidade.",
     "idaccount": "Identidade. Conta",
     "idem-wildcard-info": "Copy the value of the previous line",
-    "image": "Imagen",
+    "image": "Imagem",
     "images": "Imágenes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
     "impacted-tax-re-subaccount": "Subconta de imposto impactado repercutido",
@@ -768,6 +768,7 @@
     "installer-requirements": "As seguintes extensões e funções são necessárias para FacturaScripts:",
     "integrity-check": "Integrity check",
     "integrity-check-help": "This is a check of system integrity, described as",
+    "interest": "Interés",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
@@ -792,13 +793,13 @@
     "invoice-regularized-cant-change-date": "A fatura está dentro de uma regularização de 0. A data não pode ser modificada.",
     "invoice-regularized-cant-delete": "A fatura está dentro de uma regularização de 0. Ele não pode ser excluído.",
     "invoice-without-acc-entry": "invoice-without-acc-entry",
-    "invoiced": "invoiced",
+    "invoiced": "faturado",
     "invoices": "Faturas",
     "invoices-cant-generate-new-docs": "As faturas não podem gerar novos documentos",
     "ip": "IP",
     "ip-banned": "ip-banned",
     "irpf": "IRPF",
-    "irpf-record-not-found": "Registro de IRPF %value%% no encontrado.",
+    "irpf-record-not-found": "Registro de IRPF %value%% não encontrado.",
     "irpf-subaccount-not-found": "irpf-subaccount-not-found",
     "is-admin": "É administrador",
     "is-creditor": "É credor",
@@ -819,7 +820,7 @@
     "july": "Julio",
     "june": "Junio",
     "justified": "justified",
-    "key-google-maps": "Clave de Google Maps",
+    "key-google-maps": "Chave do Google Maps",
     "keys": "Chaves",
     "lang-code": "Código de idioma",
     "language": "Língua",
@@ -844,7 +845,7 @@
     "languages-gl_ES": "Galego",
     "languages-it_IT": "Italiano",
     "languages-pl_PL": "Polaco",
-    "languages-pt_BR": "Portugués (Brasil)",
+    "languages-pt_BR": "Português (Brasil)",
     "languages-pt_PT": "Português (Portugal)",
     "languages-va_ES": "languages-va_ES",
     "last-activity": "Última atividade",
@@ -886,7 +887,7 @@
     "location": "Location",
     "lock-accounting": "lock-accounting",
     "lock-entry": "lock-entry",
-    "lock-invoice": "Bloqueio de Fatura",
+    "lock-invoice": "Bloquear fatura",
     "lock-unlock": "Lock-Unlock",
     "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
     "locked": "Bloqueado",
@@ -950,10 +951,10 @@
     "meta-description": "FacturaScripts é um software de contabilidade e contabilidade para as PMEs. É um software livre sob a licença GNU \/ LGPL.",
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
-    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-with-cifnif": "Valor mínimo com CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Estoque mínimo",
-    "minutes": "Minutes",
+    "minutes": "Minutos",
     "mismatched-accounting-entry": "mismatched-accounting-entry",
     "missing-data-epigraph-group": "Faltando dados na epígrafe de grupo.",
     "missing-data-subaccount": "Falta dados na subconta.",
@@ -965,22 +966,22 @@
     "model-not-found": "model-not-found",
     "monday": "segunda-feira",
     "month": "Mes",
-    "month-1": "Enero",
+    "month-1": "Janeiro",
     "month-10": "Octubre",
     "month-11": "Noeviembre",
     "month-12": "Dezembro",
     "month-2": "Febrero",
     "month-3": "Marzo",
     "month-4": "Abril",
-    "month-5": "Mayo",
+    "month-5": "Maio",
     "month-6": "Junho",
     "month-7": "Julio",
     "month-8": "Agosto",
-    "month-9": "Septiembre",
+    "month-9": "Setembro",
     "month-name": "Nome do mês",
     "month-wildcard-info": "Mês atual (na data de hoje)",
     "monthly": "Mensalmente",
-    "monthly-payment": "Pago mensual",
+    "monthly-payment": "Pagamento mensal",
     "months": "Meses",
     "more": "Mais",
     "more-fields": "Mais campos",
@@ -1031,7 +1032,7 @@
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
     "not-public": "No público",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
     "not-valid-image": "No es una imagen válida",
@@ -1076,7 +1077,7 @@
     "order-email-subject": "O seu pedido %code%",
     "order-email-text": "Olá, vai anexo a sua Nota de Encomenda\/Pedido %code%",
     "orders": "Pedidos",
-    "origin": "origin",
+    "origin": "origem",
     "origin-warehouse": "Origin warehouse",
     "original": "original",
     "original-file": "Fichero original",
@@ -1232,7 +1233,7 @@
     "re-open": "re-open",
     "react": "Reaccionar",
     "read-message-by": "Leído por %nick% el %date%",
-    "read-more": "Leer más",
+    "read-more": "Ler mais",
     "readonly": "readonly",
     "rebuild": "rebuild",
     "rebuild-completed": "rebuild-completed",
@@ -1257,7 +1258,7 @@
     "refresh": "Atualizar",
     "refresh-page": "Atualizar a página",
     "refund-amount": "Cantidad devuelta",
-    "refund-payment-concept": "Devolución del recibo %document%",
+    "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "refunds",
     "register": "Registrar",
     "register-installation": "register-installation",
@@ -1289,7 +1290,7 @@
     "report": "Relatório",
     "report-grouping-account": "Group by account",
     "report-non-grouping-account": "Non group by account",
-    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
+    "report-taxes-p": "Este relatório permite obter a desagregação de impostos das faturas de compra ou venda do intervalo selecionado",
     "reports": "Relatórios",
     "request-sent": "request-sent",
     "required": "required",
@@ -1310,7 +1311,7 @@
     "role": "Role",
     "roles": "Roles",
     "rules": "Rules",
-    "run": "run",
+    "run": "executar",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
     "sales": "Vendas",
     "sales-invoice": "sales-invoice",
@@ -1339,7 +1340,7 @@
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
-    "send-images": "Enviar imágenes",
+    "send-images": "Enviar imagens",
     "send-invoices": "Enviar facturas",
     "send-location": "Enviar ubicación",
     "send-mail": "Enviar email",
@@ -1386,7 +1387,7 @@
     "show-section-new": "Mostrar sección crear",
     "signature": "Signature",
     "simple": "Simples",
-    "simplified": "Simplificada",
+    "simplified": "Simplificado",
     "size": "size",
     "sketch": "Boceto",
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
@@ -1447,7 +1448,7 @@
     "subtotal": "subtotal",
     "subtract": "Tirar do estoque",
     "success": "success",
-    "sum": "Suma",
+    "sum": "Soma",
     "sum-netos-line-tax-must-be": "A soma da rede das linhas do IVA deve ser: 0",
     "sum-total-line-tax-must-be": "A soma dos totais IVA das linhas IVA deve ser: 0",
     "summary": "Summary",
@@ -1500,7 +1501,7 @@
     "tax-debit-account": "Debit account for taxes",
     "tax-transport": "Transporte fiscal",
     "taxes": "Impostos",
-    "telemetry-data-to-send": "telemetry-data-to-send",
+    "telemetry-data-to-send": "dados de telemetria para enviar",
     "telephone-prefix": "Prefijo telefónico",
     "template": "Modelo",
     "template-error": "template-error",
@@ -1539,7 +1540,7 @@
     "total-purchases": "Total das Compras",
     "total-sales": "Total das Vendas",
     "total-value-error": "Quantidade total de 0 1 incorreta (2). Valor correto: 3",
-    "total-with-taxes": "Total with taxes",
+    "total-with-taxes": "Total com impostos",
     "totalirpf-value-error": "Quantidade total de IRPF de 0 1 incorreta (2). Valor correto: 3",
     "totaliva-value-error": "Valor de imposto total de 0 1 incorreto (2). Valor correto: 3",
     "totallinea-value-error": "Erro no valor totallinea da linha IVA do imposto 0 da factura. Valor correto: 1",
@@ -1551,7 +1552,7 @@
     "transfers-stock": "Transfers stock",
     "translation": "Tradução",
     "translations": "Traduções",
-    "travel": "Viaje",
+    "travel": "Viagem",
     "try-again-later": "T",
     "tuesday": "terça-feira",
     "type": "Tipo",
@@ -1625,8 +1626,8 @@
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
-    "view-estimation": "Ver presupuesto",
-    "view-order": "Ver pedido",
+    "view-estimation": "Ver orçamento",
+    "view-order": "Ver encomenda",
     "warehouse": "Armazém",
     "warehouse-cant-be-same": "O armazém de origem e destino não pode ser o mesmo.",
     "warehouse-must-be-same-business": "warehouse-can-be-same-business",
