--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -295,7 +295,7 @@
     "contact": "Contato",
     "contact-data": "Dados de contato",
     "contact-info": "Informações de contato",
-    "contact-information": "contact-information",
+    "contact-information": "informações de contato",
     "contact-person": "Pessoa de contato",
     "contacts": "Contatos",
     "context": "Contexto",
@@ -415,7 +415,7 @@
     "delete-data": "Delete data",
     "delete-file": "delete-file",
     "delete-logs": "Eliminar historial",
-    "delete-opening": "delete-opening",
+    "delete-opening": "Eliminar abertura",
     "delete-record": "Remover registro",
     "Deleted": "Eliminado",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
@@ -478,7 +478,7 @@
     "document-without-total": "Documento %document% sin totales o con el total a 0.",
     "documentation": "Documentação",
     "documents": "Documentos",
-    "documents-generated": "documents-generated",
+    "documents-generated": "documentos gerados",
     "domiciled": "Domiciliado",
     "done": "Feito",
     "done-date": "Fecha finalización",
@@ -555,7 +555,7 @@
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "E",
     "es-tax-regime-agrarian": "R",
-    "es-tax-regime-cash-criteria": "Criterio de caja",
+    "es-tax-regime-cash-criteria": "Criterio de caixa",
     "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-exempt": "Exento",
     "es-tax-regime-general": "Régimen general",
@@ -697,14 +697,14 @@
     "group": "Grupo",
     "group-accounts": "group-accounts",
     "group-by-day": "Agrupar por dia",
-    "group-by-day-unixtime": "group-by-day-unixtime",
+    "group-by-day-unixtime": "Agrupar por dia - unixtime",
     "group-by-month": "group-by-month",
     "group-by-month-unixtime": "group-by-month-unixtime",
     "group-by-subaccount": "Agrupar por subcuenta",
     "group-by-week": "group-by-week",
     "group-by-week-unixtime": "group-by-week-unixtime",
     "group-by-year": "group-by-year",
-    "group-by-year-unixtime": "group-by-year-unixtime",
+    "group-by-year-unixtime": "Agrupar por ano - unixtime",
     "group-more-docs-p": "group-more-docs-p",
     "group-name": "Nome do Grupo",
     "group-or-split": "Group or split",
@@ -741,7 +741,7 @@
     "id": "Identidade.",
     "idaccount": "Identidade. Conta",
     "idem-wildcard-info": "Copy the value of the previous line",
-    "image": "Imagen",
+    "image": "Imagem",
     "images": "Imágenes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
     "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
@@ -768,6 +768,7 @@
     "installer-requirements": "As seguintes extensões e funções são necessárias para FacturaScripts:",
     "integrity-check": "Integrity check",
     "integrity-check-help": "This is a check of system integrity, described as",
+    "interest": "Interés",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
@@ -792,7 +793,7 @@
     "invoice-regularized-cant-change-date": "A fatura está dentro de uma regularização de 0. A data não pode ser modificada.",
     "invoice-regularized-cant-delete": "A fatura está dentro de uma regularização de 0. Ele não pode ser excluído.",
     "invoice-without-acc-entry": "invoice-without-acc-entry",
-    "invoiced": "invoiced",
+    "invoiced": "faturado",
     "invoices": "Faturas",
     "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
     "ip": "IP",
@@ -844,7 +845,7 @@
     "languages-gl_ES": "Galego",
     "languages-it_IT": "Italiano",
     "languages-pl_PL": "Polaco",
-    "languages-pt_BR": "Portugués (Brasil)",
+    "languages-pt_BR": "Português (Brasil)",
     "languages-pt_PT": "Português (Portugal)",
     "languages-va_ES": "languages-va_ES",
     "last-activity": "Ultima atividade",
@@ -886,7 +887,7 @@
     "location": "Location",
     "lock-accounting": "lock-accounting",
     "lock-entry": "lock-entry",
-    "lock-invoice": "Bloqueio de Fatura",
+    "lock-invoice": "Bloquear fatura",
     "lock-unlock": "Lock-Unlock",
     "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
     "locked": "Bloqueado",
@@ -953,7 +954,7 @@
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Estoque mínimo",
-    "minutes": "Minutes",
+    "minutes": "Minutos",
     "mismatched-accounting-entry": "mismatched-accounting-entry",
     "missing-data-epigraph-group": "Faltando dados na epígrafe de grupo.",
     "missing-data-subaccount": "Falta dados na subconta.",
@@ -972,15 +973,15 @@
     "month-2": "Febrero",
     "month-3": "Marzo",
     "month-4": "Abril",
-    "month-5": "Mayo",
+    "month-5": "Maio",
     "month-6": "Junio",
     "month-7": "Julio",
     "month-8": "Agosto",
-    "month-9": "Septiembre",
+    "month-9": "Setembro",
     "month-name": "Nome do mês",
     "month-wildcard-info": "Mês atual (na data de hoje)",
     "monthly": "Mensalmente",
-    "monthly-payment": "Pago mensual",
+    "monthly-payment": "Pagamento mensal",
     "months": "Meses",
     "more": "Mais",
     "more-fields": "Mais campos",
@@ -1031,7 +1032,7 @@
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
     "not-public": "No público",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
     "not-valid-image": "No es una imagen válida",
@@ -1257,7 +1258,7 @@
     "refresh": "Atualizar",
     "refresh-page": "Atualizar a página",
     "refund-amount": "Cantidad devuelta",
-    "refund-payment-concept": "Devolución del recibo %document%",
+    "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "refunds",
     "register": "Registrar",
     "register-installation": "register-installation",
@@ -1289,7 +1290,7 @@
     "report": "Relatório",
     "report-grouping-account": "Group by account",
     "report-non-grouping-account": "Non group by account",
-    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
+    "report-taxes-p": "Este relatório permite obter a desagregação de impostos das faturas de compra ou venda do intervalo selecionado",
     "reports": "Relatórios",
     "request-sent": "request-sent",
     "required": "required",
@@ -1310,7 +1311,7 @@
     "role": "Role",
     "roles": "Roles",
     "rules": "Rules",
-    "run": "run",
+    "run": "executar",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
     "sales": "Vendas",
     "sales-invoice": "sales-invoice",
@@ -1500,7 +1501,7 @@
     "tax-debit-account": "Debit account for taxes",
     "tax-transport": "Transporte fiscal",
     "taxes": "Impostos",
-    "telemetry-data-to-send": "telemetry-data-to-send",
+    "telemetry-data-to-send": "dados de telemetria para enviar",
     "telephone-prefix": "Prefijo telefónico",
     "template": "Modelo",
     "template-error": "template-error",
@@ -1551,7 +1552,7 @@
     "transfers-stock": "Transfers stock",
     "translation": "Tradução",
     "translations": "Traduções",
-    "travel": "Viaje",
+    "travel": "Viagem",
     "try-again-later": "T",
     "tuesday": "terça-feira",
     "type": "Tipo",
@@ -1625,8 +1626,8 @@
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
-    "view-estimation": "Ver presupuesto",
-    "view-order": "Ver pedido",
+    "view-estimation": "Ver orçamento",
+    "view-order": "Ver encomenda",
     "warehouse": "Armazém",
     "warehouse-cant-be-same": "O armazém de origem e destino não pode ser o mesmo.",
     "warehouse-must-be-same-business": "warehouse-can-be-same-business",
