--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -599,7 +599,7 @@
     "family": "Familia",
     "family-code": "Còdic de la família",
     "fax": "Fax",
-    "february": "Febrero",
+    "february": "Febrer",
     "field-can-not-be-null": "El camp %fieldName% de la taula %tableName% no pot ser nul",
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
@@ -621,7 +621,7 @@
     "filter-records-containing-indicated-value": "Filtrar els registres que contenen el valor indicat",
     "filters": "Filtres",
     "finalize": "Acabar",
-    "find-problems": "Encontrar problemas",
+    "find-problems": "Trobar problemes",
     "finished": "Finalizado",
     "finished-cron": "L'eixecució del cron FacturaScripts ja ha acabat. El temps necessari ha segut de: %timeNeeded%",
     "first-quarter": "Primer trimestre",
@@ -714,7 +714,7 @@
     "has-attachments": "Tiene adjuntos",
     "has-parent": "has-parent",
     "hash": "Hash",
-    "header": "Cabecera",
+    "header": "Capçalera",
     "heading-account-group-id": "ID del grup",
     "heading-account-id-root": "ID del pare",
     "health": "Salut",
@@ -754,7 +754,7 @@
     "in-stock": "En estoc",
     "inactive": "inactive",
     "income-and-expenses": "Ingressos i Despeses",
-    "incompatible-document": "Document incompatible: % code%. Diferent client, proveïdor o divisa.",
+    "incompatible-document": "Document incompatible: %code%. Diferent client, proveïdor o divisa.",
     "incompatible-with-facturascripts": "Incompatible en la versió %version%  de FacturaScripts",
     "incorrect-accounting-amount": "L'import de l'assentament no és correcte.",
     "info": "Informació",
@@ -768,6 +768,7 @@
     "installer-requirements": "FacturaScripts necessita les següents extensions i funcions:",
     "integrity-check": "Comprovar l'integritat",
     "integrity-check-help": "Esta és una comprovació de l'integritat del sistema descrita com",
+    "interest": "Interés",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "El codi introduït (%value%) no és vàlid. (%column%) ha de tindre entre %min% i %max% números o lletres.",
@@ -967,7 +968,7 @@
     "month": "Mes",
     "month-1": "Enero",
     "month-10": "Octubre",
-    "month-11": "Noeviembre",
+    "month-11": "Novembre",
     "month-12": "Diciembre",
     "month-2": "Febrero",
     "month-3": "Marzo",
@@ -1187,7 +1188,7 @@
     "print-data-records": "Imprimir tots els registres",
     "print-export-options": "Opcions d'impressió i d'exportació",
     "print-list-of-records": "Imprimix el llistat de registres",
-    "print-price": "Imprimir precios",
+    "print-price": "Imprimir preus",
     "print-quantity": "I",
     "printed": "Imprès",
     "printing-format": "Format d'impressió",
@@ -1358,7 +1359,7 @@
     "serial-number": "Número de Série",
     "serie": "Série",
     "serieb": "Serie B",
-    "serier": "Serie R",
+    "serier": "Sèrie R",
     "serierb": "Serie RB",
     "series": "Séries",
     "server": "Servidor",
@@ -1401,7 +1402,7 @@
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
     "sorted-asc": "Ordenado ascendente",
-    "sorted-desc": "Ordenado descendente",
+    "sorted-desc": "Ordenat descendent",
     "source": "Fuente",
     "source-code": "Codi font",
     "special-account": "Conte especial",
@@ -1511,7 +1512,7 @@
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
     "text-color": "Color de texto",
     "texts": "textos",
-    "third-quarter": "3º trimestre",
+    "third-quarter": "3r trimestre",
     "third-trimester": "Tercer trimestre",
     "this-last-fortnight": "Els darrers 15 dies",
     "this-last-month": "Els darrers 30 dies",
@@ -1572,7 +1573,7 @@
     "unit-profit": "unit-profit",
     "unit-purchase-price": "unit-purchase-price",
     "unit-sale-price": "unit-sale-price",
-    "unlimited": "Ilimitado",
+    "unlimited": "Il·limitat",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
     "unlink-install-ok": "Instal·lació borrada del registre correctament.",
@@ -1621,8 +1622,8 @@
     "vehicle": "Vehículo",
     "verified": "Verificat",
     "version": "Versió",
-    "video": "Video",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "video": "Vídeo",
+    "vies-check-success": "El número '%vat-number%' està registrat en el sistema VIES",
     "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "view-estimation": "V",
@@ -1653,7 +1654,7 @@
     "wizard-p": "Ompli este formulari sobre el teu negoci per a acabar la configuració",
     "wizard-plugins": "Un plugin és un complement que afig noves funcionalitats. Selecciona els plugins que vulgues activar immediatament, o fes-ho més tard des del panell de control.",
     "work-events": "Eventos de trabajo",
-    "working-hours": "Horario de trabajo",
+    "working-hours": "Horari de treball",
     "write-a-message-here": "Escriu un missatge ací",
     "x-column": "Columna X",
     "x-operation": "Operació sobre X",
