--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -338,7 +338,7 @@
     "crm": "CRM",
     "cron-job": "Tarea programada",
     "cron-timeout": "Časový limit cronu byl dosažen, pro překročení maximálního běhového limitu PHP byl zastaven. Pro vyhnutí se této limitaci spusťte cron z terminálu.",
-    "crons": "Crons",
+    "crons": "Stroje",
     "currency": "Divisa",
     "currency-position": "Posición símbolo de divisa",
     "current-quarter": "Aktuální čtvrtletí",
@@ -768,6 +768,7 @@
     "installer-requirements": "Las siguientes extensiones y funciones son necesarias en FacturaScripts:",
     "integrity-check": "Verificación de integridad",
     "integrity-check-help": "Esta es una verificación de la integridad del sistema, descrita como",
+    "interest": "Interés",
     "international-identifier": "Identificación internacional",
     "intra-community": "Uvnitřúnijní",
     "invalid-alphanumeric-code": "El código introducido (%value%) no es válido. (%column%) debe tener entre %min% y %max% números o letras, sin espacios, acentos, ni otros caracteres.",
